ip와 port를 xml 형태의 config 파일로 부터 변경할 수있도록 기능 추가 프로그램 로그를 이벤트 로그에 남길 수 있는 LogManager 클래스 추가

--- a/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
+++ b/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogManager.cs" />
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="EventBinding.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
