--- a/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
+++ b/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils.cs" />
     <Compile Include="LogManager.cs" />
     <Compile Include="ConfigManager.cs" />
     <Compile Include="EventBinding.cs" />
