로그 전송 시 agent 식별 키로 사용하기 위해 UUID (GUID 생성)를 레지스트리에 등록해서 사용

--- a/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
+++ b/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RegManager.cs" />
     <Compile Include="MessageManager.cs" />
     <Compile Include="IpChangeMessageManager.cs" />
     <Compile Include="LogOnOffMessageManager.cs" />
