공통 로그 부분 추출 후 로그 마지막 부분에 붙이기  - 누락된 항목 커밋

--- a/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
+++ b/HyunDaiSecurityAgent/HyunDaiSecurityAgent.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonMessageManager.cs" />
     <Compile Include="RegManager.cs" />
     <Compile Include="MessageManager.cs" />
     <Compile Include="IpChangeMessageManager.cs" />
